Issue #12791: Break reference cycles early when a generator exits with an exception.